# FIP_DAQ_Control

./: .buildinfo  .gitignore  README.md  api.html  api.rig.html  api.session.html  dataset.html  genindex.html  index.html  json-schemas.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api.doctree  api.rig.doctree  api.session.doctree  dataset.doctree  environment.pickle  index.doctree  json-schemas.doctree
.github/workflows/: aind-physiology-fip-cicd.yml  docs.yml
_sources/: index.rst.txt  json-schemas.rst.txt
_static/: dataset.html  documentation_options.js
bonsai/: Bonsai.config  setup.ps1
docs/: api.task_logic.rst  conf.py  json-schemas.rig.rst  json-schemas.session.rst  json-schemas.task_logic.rst
examples/: AindBehaviorSessionModel.json  ProtoAcquisitionDataSchema.json  example.py
scripts/: demo.cmd  launcher_example.cmd
src/: Extensions.csproj  main.bonsai  test_deserialization.bonsai
src/DataSchemas/: aind_physio_fip_rig.json  aind_physio_fip_task_logic.json  aind_physiology_fip_message_protocol.json
src/Extensions/: AindBehaviorSessionModel.cs  AindPhysioFipRig.cs  AindPhysioFipRigHelpers.cs  AindPhysioFipTaskLogic.cs  AindPhysiologyFipMessageProtocol.Generated.cs  AindPhysiologyFipMessageProtocol.cs  CircleActivityToMat.cs  CircleActivityVisualizer.cs  CircleRoiConverter.cs  CreateMessage.bonsai  CreateTaskFromLightSource.cs  FipWriter.cs  ImageEllipsePicker.cs  LoadRoiDefault.cs  SelectCircles.cs  SelectCirclesVisualizer.cs
src/aind_physiology_fip/: cli.py  launcher.py  message_protocol.py  regenerate.py  rig.py  task_logic.py
src/aind_physiology_fip/data_mappers/: __init__.py  _acquisition.py  _base.py  _instrument.py
tests/: test_aind_data_schema_mapper.py  test_bonsai.py
